<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:layout_height="wrap_content">

    <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/orderId"
            android:text="@string/orderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/nameCustomer"
            android:text="@string/nameCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/contact"
            android:text="@string/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/address"
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/total"
            android:text="@string/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:id="@+id/viewOrder"
            android:text="@string/viewOrder"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:layout_height="50dp"/>

</LinearLayout>