<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Customer.Cart.ConfirmOrderActivity">

    <EditText
        android:id="@+id/et_nama"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:hint="@string/nameCustomer"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_no_telp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:hint="@string/contact"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_alamat"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:hint="@string/address"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_confirm_order"
        android:text="@string/confirmOrder"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="#fff"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content"/>


</LinearLayout>