<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Customer.Cart.CartActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recyclerview"
        android:layout_height="wrap_content"/>

    <View android:layout_width="match_parent"
        android:layout_marginVertical="5dp"
        android:background="#000"
        android:layout_height="1dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/total"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/total_quantity"
            android:layout_width="match_parent"
            android:text="@string/quantity"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:text="@string/totalPrice"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_checkout"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:text="@string/checkout"
        android:textColor="#fff"
        android:background="@color/colorPrimaryDark"
        android:layout_height="50dp"/>

</LinearLayout>

