<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_shadow"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="10dp"
    android:layout_marginTop="50dp"
    android:paddingBottom="10dp"
    tools:context=".Customer.Cart.QuantityActivity">

        <LinearLayout
            android:id="@+id/layLinQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >

            <ImageView
                android:id="@+id/ivProduct"
                android:layout_width="170dp"
                android:layout_height="150dp"
                android:src="@drawable/empty_images"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNameProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nameProduct"
                    android:textSize="20sp"
                    android:fontFamily="@font/lemon"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:id="@+id/tvPriceProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:fontFamily="@font/caveat_brush"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/btnDecrement"
                        android:layout_height="40dp"
                        android:layout_width="40dp"
                        android:text="@string/a"
                        android:textColor="#fff"
                        android:textSize="25sp"
                        android:background="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/c"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp"
                        />

                    <Button
                        android:id="@+id/btnIncrement"
                        android:layout_height="40dp"
                        android:layout_width="40dp"
                        android:text="@string/b"
                        android:textColor="#fff"
                        android:textSize="25sp"
                        android:background="@color/colorPrimary"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linTotal"
            android:layout_below="@+id/layLinQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/d"
                android:fontFamily="@font/caveat_brush"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:text="@string/c"
                android:fontFamily="@font/lemon"
                android:layout_marginHorizontal="10dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnAddCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addToCart"
            android:textColor="#fff"
            android:background="@color/colorPrimaryDark"
            android:layout_below="@+id/linTotal"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

