<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.Product.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:background="@drawable/border_image"
            android:layout_height="170dp">

            <ImageView
                android:layout_width="100dp"
                android:src="@drawable/ic_add_image"
                android:layout_centerInParent="true"
                android:layout_height="100dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/img_product"
                android:background="#10ffffff"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <EditText
            android:id="@+id/et_nameProduct"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/nameProduct"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_priceProduct"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:inputType="number"
            android:hint="@string/price"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_saveData"
            android:layout_width="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"/>


        <ProgressBar
            android:id="@+id/progressbar"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_width="30dp"
            android:layout_height="30dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="10dp"
            android:id="@+id/rv_product"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>